--- a/server/.env
+++ b/server/.env
@@ -4,5 +4,5 @@ DB_HOST='localhost'
 DB_PORT=5432
 DB_USERNAME='postgres'
 DATABASE_USER='postgres'
-DATABASE_PASSWORD=409735664
+DATABASE_PASSWORD=
 DB_NAME='budget'
